--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "browser-sync": "^2.18.8",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "mongoose": "^4.8.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
