--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^6.4.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "body-parser": "^1.17.1",
     "browser-sync": "^2.18.8",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
