--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "compile": "webpack --watch",
-    "start": "npm-run-all --parallel watch:server watch:build",
+    "start": "nodemon server/server.js",
+    "startAll": "./node_modules/.bin/webpack --watch & nodemon server/server.js & clear",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:build": "webpack --watch",
-    "watch:server": "nodemon \"./server/server.js\" --watch \"./server\""
+    "build:watch": "webpack --watch",
+    "seed": "node server/db/seed.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +25,12 @@
     "babel-core": "^6.23.1",
     "browser-sync-webpack-plugin": "^1.1.4",
     "css-loader": "^0.26.4",
+    "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "style-loader": "^0.13.2"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-latest": "^6.22.0",
