--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "browser-sync": "^2.18.8",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "js-cookie": "^2.1.3",
     "mongoose": "^4.8.6",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
