--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "babel-core": "^6.23.1",
     "browser-sync-webpack-plugin": "^1.1.4",
     "css-loader": "^0.26.4",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-nodemon": "^0.4.2",
+    "grunt-shell": "^2.1.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "style-loader": "^0.13.2"
