--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "OrderlyPhoenix",
   "version": "1.0.0",
-  "description": "",
+  "description": "Learn to code!",
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon server/server.js",
-    "startAll": "./node_modules/.bin/webpack --watch & nodemon server/server.js & clear",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build:watch": "webpack --watch",
     "seed": "node server/db/seed.js"
   },
@@ -15,7 +13,7 @@
     "url": "git+https://github.com/OrderlyPhoenix/OrderlyPhoenix.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Orderly Phoenix",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/OrderlyPhoenix/OrderlyPhoenix/issues"
@@ -23,7 +21,6 @@
   "homepage": "https://github.com/OrderlyPhoenix/OrderlyPhoenix#readme",
   "devDependencies": {
     "babel-core": "^6.23.1",
-    "browser-sync-webpack-plugin": "^1.1.4",
     "css-loader": "^0.26.4",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
@@ -35,15 +32,12 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
-    "browser-sync": "^2.18.8",
     "express": "^4.15.2",
-    "express-session": "^1.15.1",
     "js-cookie": "^2.1.3",
     "mongoose": "^4.8.6",
     "react": "^15.4.2",
@@ -53,8 +47,6 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "reactstrap": "^4.3.0",
-    "webpack": "^2.2.1",
-    "webpack-body-parser": "^1.11.110",
-    "webpack-dev-middleware": "^1.10.1"
+    "webpack": "^2.2.1"
   }
 }
